objects/Cash_Logistics_Survey_Setting__mdt.object
<CustomObject>
    <description>Used to config any cash logistics survey / questionnaire.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked. the field will not be displayed on the form.</description>
        <inlineHelpText>If checked. the field will not be displayed on the form.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependent_On__c</fullName>
        <description>If there is a value, display logic will evaluate this value (business logic in lwc) to determine if we need to display this field conditionally.</description>
        <inlineHelpText>If there is a value, display logic will evaluate this value (business logic in lwc) to determine if we need to display this field conditionally. ie sample value = Account__r.Funds_in_Field__c</inlineHelpText>
        <label>Dependent On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Value__c</fullName>
        <description>Looks up the Dependent on Field and ensures this value exists in that field.</description>
        <inlineHelpText>Looks up the Dependent on Field and ensures this value exists in that field.</inlineHelpText>
        <label>Dependent Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field is disabled. ie it does not get submitted to the server.</description>
        <inlineHelpText>The field is disabled. ie it does not get submitted to the server.</inlineHelpText>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Api_Name__c</fullName>
        <description>Field field api name for the particular field on the sObject</description>
        <inlineHelpText>Field field api name for the particular field on the sObject</inlineHelpText>
        <label>Field Api Name</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Class__c</fullName>
        <description>The css  override class for the field.</description>
        <inlineHelpText>The css override class for the field</inlineHelpText>
        <label>Field Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <description>The label of the field on the form.</description>
        <inlineHelpText>The label of the field on the form.</inlineHelpText>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The order the field displays on the form.</description>
        <inlineHelpText>The order the field displays on the form.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the field is read only (but is submitted to the server)</description>
        <inlineHelpText>If checked the field is read only (but is submitted to the server)</inlineHelpText>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the field will be made required on the form.</description>
        <inlineHelpText>If checked, the field will be made required on the form.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObject_Api_Name__c</fullName>
        <description>The API name of the sObject for the form. This must be the same for all developer names. ie. Route_Processing_Sheet__c</description>
        <inlineHelpText>The API name of the sObject for the form. This must be the same for all developer names. Route_Processing_Sheet__c</inlineHelpText>
        <label>SObject Api Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Dev_Name__c</fullName>
        <description>The custom developer name for the form. this should be the same for fall fields within the form. This is used to key on in the query in the client form logic.</description>
        <inlineHelpText>The custom developer name for the form. this should be the same for fall fields within the form.</inlineHelpText>
        <label>Survey Dev Name</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Area_Min_Height__c</fullName>
        <defaultValue>&quot;150px&quot;</defaultValue>
        <description>If the field is a text area or rich text area this will override the default SFDC CSS to set the height of the enterable value. ie. 150px</description>
        <inlineHelpText>If the field is a text area or rich text area this will override the default SFDC CSS to set the height of the enterable value. ie. 150px</inlineHelpText>
        <label>Text Area Min Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <description>The variant of the label for the field. @see https://developer.salesforce.com/docs/component-library/bundle/lightning-input-field/documentation</description>
        <inlineHelpText>The variant of the label for the field @see https://developer.salesforce.com/docs/component-library/bundle/lightning-input-field/documentation</inlineHelpText>
        <label>Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cash Logistics Survey Setting</label>
    <listViews>
        <fullName>All_CL</fullName>
        <columns>DeveloperName</columns>
        <columns>Survey_Dev_Name__c</columns>
        <columns>SObject_Api_Name__c</columns>
        <columns>Field_Api_Name__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Class__c</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <columns>MasterLabel</columns>
        <columns>Variant__c</columns>
        <columns>Required__c</columns>
        <columns>Dependent_On__c</columns>
        <columns>Dependent_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All CL</label>
    </listViews>
    <listViews>
        <fullName>All_RPSQUESTIONS</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Survey_Dev_Name__c</columns>
        <columns>SObject_Api_Name__c</columns>
        <columns>Field_Api_Name__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Class__c</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <columns>Variant__c</columns>
        <columns>Required__c</columns>
        <columns>Disabled__c</columns>
        <columns>Read_Only__c</columns>
        <columns>Dependent_On__c</columns>
        <columns>Dependent_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Dev_Name__c</field>
            <operation>equals</operation>
            <value>RPSQuestions</value>
        </filters>
        <label>All RPS QUESTIONS</label>
    </listViews>
    <listViews>
        <fullName>All_RPS_Survey</fullName>
        <columns>DeveloperName</columns>
        <columns>Survey_Dev_Name__c</columns>
        <columns>SObject_Api_Name__c</columns>
        <columns>Field_Api_Name__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Class__c</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <columns>MasterLabel</columns>
        <columns>Variant__c</columns>
        <columns>Required__c</columns>
        <columns>Disabled__c</columns>
        <columns>Read_Only__c</columns>
        <columns>Text_Area_Min_Height__c</columns>
        <filterScope>Everything</filterScope>
        <label>RPS Survey Settings</label>
    </listViews>
    <pluralLabel>Cash Logistics Survey Settings</pluralLabel>
    <validationRules>
        <fullName>CL_VR_REQ_NO_DISABLED</fullName>
        <active>true</active>
        <description>If you mark the field as required please do not mark as disabled as well.</description>
        <errorConditionFormula>AND( Required__c , Disabled__c )</errorConditionFormula>
        <errorDisplayField>Disabled__c</errorDisplayField>
        <errorMessage>If you mark the field as required please do not mark as disabled as well.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL_VR_REQ_NO_READONLY</fullName>
        <active>true</active>
        <description>If you mark the field as required please do not mark as read only as well.</description>
        <errorConditionFormula>AND( Required__c ,  Read_Only__c  )</errorConditionFormula>
        <errorDisplayField>Required__c</errorDisplayField>
        <errorMessage>If you mark the field as required please do not mark as read only as well.</errorMessage>
    </validationRules>
</CustomObject>